<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_wrapper"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="280dp"
    android:padding="12dp"
    android:orientation="vertical"
    android:gravity="center"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/process_faulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/register_process_faulty"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/work_name"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txt_productName1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/faulty_process"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txt_faultyProcess"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/faulty_category"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txt_faultyType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/no_selected"
                android:visibility="gone"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"/>

            <Spinner
                android:id="@+id/spn_faultyType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="불량 내역"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/txt_faultyHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:maxLines="10"
                android:hint="@string/enter_faulty"
                android:textSize="14sp"
                android:inputType="text"
                android:textColorHint="#704469A4"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:background="@drawable/text_background6"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/btn_faultyCommit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:stateListAnimator="@null"
                android:text="불량등록"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/process_commit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/start_process2"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/work_name"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/txt_productName2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/process_name"
                android:textSize="15sp"/>


            <TextView
                android:id="@+id/txt_process"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_chkInfo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/check"
                android:textSize="15sp"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_chkInfo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fadeScrollbars="false"
                android:scrollbarSize="4dp"
                android:layout_weight="8"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:visibility="gone"
                android:indeterminateTint="#4469A4" />
        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="투입자재명" />

            <Spinner
                android:id="@+id/spn_materialsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="투입자재수량" />

            <EditText
                android:id="@+id/txt_materialsQuantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:inputType="number" />

        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/layout_articulator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/arti_use"
                android:gravity="center_vertical"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_none_arti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/empty_arti"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/spn_articulator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"/>
                <CheckBox
                    android:id="@+id/checkbox_arti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arti_use"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/remark"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/edit_remark"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:maxLines="10"
                android:textSize="15sp"
                android:hint="@string/enter_remark"
                android:inputType="text"
                android:textColor="@color/dark_gray"
                android:textColorHint="#704469A4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:stateListAnimator="@null"
                android:background="@drawable/text_background6"
                android:textStyle="bold"
                android:textColor="#4469A4"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/btn_processCommit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:stateListAnimator="@null"
                android:text="@string/start_process"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="17sp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>