<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_shape"
    android:paddingStart="20dp"
    android:paddingTop="19dp"
    android:paddingEnd="20dp"
    android:paddingBottom="16dp"
    android:gravity="center_vertical"
    app:behavior_hideable="false"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/scaned_barcode"
        android:textColor="#06060A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_articulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/longclick_arti"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_title"/>

<!--    <Button-->
<!--        android:id="@+id/btn_close"-->
<!--        android:layout_width="20dp"-->
<!--        android:layout_height="20dp"-->
<!--        android:background="@drawable/circle_button"-->
<!--        android:foreground="@drawable/icon_close"-->
<!--        app:layout_constraintTop_toTopOf="@id/txt_title"-->
<!--        app:layout_constraintRight_toRightOf="parent" />-->

    <LinearLayout
        android:id="@+id/recycler_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@+id/txt_articulator"
        app:layout_constraintBottom_toTopOf="@+id/btn_layout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/barcode_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="5dp"
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_background"
            android:text="@string/dialog_process_start"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@drawable/text_background2"
            android:text="@string/dialog_process_finish"
            android:textColor="@color/dark_gray"
            android:textSize="17sp"
            android:textStyle="bold"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>