<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_sub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/iconTxt_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="20dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="{fa-image}"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/photo"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconTxt_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="20dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="{fa-phone}"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/call"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/iconTxt_memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="20dp">

            <com.joanzapata.iconify.widget.IconTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="{fa-sticky-note}"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/memo"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>